--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,8 @@
 ---
+import Footer from "../components/Footer.astro";
+import Header from "../components/Header.astro";
 
+const pageTitle = "My Astro Learning Blog";
 ---
 
 <html lang="en">
@@ -8,14 +11,22 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{pageTitle}</title>
+    <style>
+      h1 {
+        font-size: 4rem;
+      }
+    </style>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
-
-    <h1>My Astro Learning Blog</h1>
+    <Header />
+    <h1>{pageTitle}</h1>
     <p>This is where I will post about my journey learning Astro.</p>
+    <ul>
+      <li><a href="/posts/post-1/">Post 1</a></li>
+      <li><a href="/posts/post-2/">Post 2</a></li>
+      <li><a href="/posts/post-3/">Post 3</a></li>
+    </ul>
+    <Footer />
   </body>
 </html>
